<resources>
    <string name="app_name">CWP Client 06</string>
    <string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Connected">Connected</string>
    <string name="Disconnected">Disconnected</string>
    <string name="title_activity_settings">Settings</string>
    <string name="change">CHANGE</string>

    <!-- CWP Server settings -->
    <string name="pref_header_cwpserver">CWP Server</string>
    <string name="pref_header_summary_cwpserver">
        Configure server address, port and toggle auto-reconnect.
    </string>
    <string name="pref_server_address_title">Server Address</string>
    <string name="pref_server_port_title">Server Port</string>
    <string name="pref_auto_reconnect_title">Auto Reconnect</string>


    <!-- Connection settings -->
    <string name="pref_header_channel_frequency">Channel Frequency</string>
    <string name="pref_header_summary_channel_frequency">
        Set the communication channel frequency.
    </string>
    <string name="pref_connection_frequency_title">Frequency</string>

    <!-- Signal Alert Settings -->
    <string name="pref_header_alert">Beep</string>
    <string name="pref_header_summary_alert">
        Toggle beep alert and set volume.
    </string>
    <string name="pref_alert_beep_title">Mute</string>
    <string name="pref_alert_beep_volume">Volume</string>
    <string name="pref_alert_beep_volume_summary">Set volume between 0 and 100.</string>

    <!-- Shared Preference Keys -->
    <string name="pref_key_auto_reconnect">auto_reconnect</string>
    <string name="pref_key_connection_frequency">connection_frequency</string>
    <string name="pref_key_server_address">server_address</string>
    <string name="pref_key_server_port">server_port</string>
    <string name="pref_key_signal_beep_mute">signal_beep_mute</string>
    <string name="pref_key_signal_beep_volume">signal_beep_volume</string>
    <string name="pref_key_should_auto_connect">should_auto_connect</string>

    <!-- Default Configuration Values -->
    <string name="pref_default_server_address">cwp.opimobi.com</string>
    <string name="pref_default_server_port">20000</string>
    <string name="pref_default_connection_frequency">1</string>
    <string name="pref_default_auto_reconnect">true</string>
    <string name="pref_default_beep_mute">false</string>
    <string name="pref_default_beep_volume">50</string>

</resources>
