<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <SwitchPreference
        android:key="@string/pref_key_auto_reconnect"
        android:title="@string/pref_auto_reconnect_title"
        android:defaultValue="@string/pref_default_auto_reconnect"
        />
    
    <EditTextPreference
        android:defaultValue="@string/pref_default_server_address"
        android:inputType="textUri"
        android:key="@string/pref_key_server_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:title="@string/pref_server_address_title" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_server_port"
        android:inputType="number"
        android:key="@string/pref_key_server_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:title="@string/pref_server_port_title" />

</PreferenceScreen>
